# example-gcp-batch

./: Dockerfile  Makefile  mybatch.json  pyproject.toml  sample.envrc
mybatch/: __main__.py
