[tool.poetry]
name = "mybatch"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11,<3.13"
lightgbm = "^4.1.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
